# covite-backend

./: .editorconfig  .gitignore  Procfile  README.md  api.graphql  pyproject.toml  pyrightconfig.json
script/: webdriver-hello-world.py
script/just/: .gitignore  README.md  go.mod  just.go
web_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web_server/web_server/: settings.py  urls.py
web_server/web_server/todo_api/: models.py  serializers.py  tests.py  views.py
web_server/web_server/todo_api/migrations/: 0001_initial.py
