[tool.poetry]
name = "csrfRestServer"
version = "0.1.0"
description = ""
authors = [
    "Mathieu CAROFF <mathieu.caroff@free.fr>",
]

[tool.poetry.dependencies]
python = "3.8.3"
django = "^3.0.5"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
ipython = "^7.13.0"
black = "^19.10b0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
